fix: woktime処理の修正
